--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,7 @@
 	<classpathentry kind="lib" path="src/edwin/alkins/swingTest/gameSSS/lib/jdom-2.0.6-sources.jar"/>
 	<classpathentry kind="lib" path="src/edwin/alkins/swingTest/gameSSS/lib/jdom-2.0.6.jar"/>
 	<classpathentry kind="lib" path="src/edwin/alkins/swingTest/gameSSS/lib/jackson-all-1.9.0.jar"/>
+	<classpathentry kind="lib" path="jgoodies-common-1.8.0.jar" sourcepath="jgoodies-common-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
